--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 .bottomprev{font-size: 15pt}
 h1{color: red; font-size: 50pt;}
 h2{color: rgb(84, 166, 199); font-size: 35pt; text-align: center;}
+h3{color: red; font-size: 35pt; text-indent: 175px;}
 p{color:whitesmoke}
 button{font-size: 35pt; color: red;}
 #mission-statement{text-transform: capitalize; color:blue;}
