--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,7 +12,7 @@
         <a class="active" href="/herosumgame.html"><img src="/images/nav_home.png" width =150></a>
         <a href="/blog.html"><img src="/images/nav_blog.png" width =150></a>
         <a href="https://www.patreon.com/Piledrivercomix?alert=2" target="_blank"><img src="/images/nav_patreon.png" width =200></a>
-        <a href="https://www.paypal.com/donate/?token=GI-SPhDUXhJu_3uh-Q_pAcay3TpMt6Ne0BQVccHTXvr7tUpEs5u3-zRzJsTtiKpP1YXTzm&country.x=US&locale.x=" target="_blank"><img src="/images/nav_donate.png" width =200></a>
+        <a href="https://www.paypal.me/piledrivercomix" target="_blank"><img src="/images/nav_donate.png" width =200></a>
     </div>
     <nav class="sidenav">
         <p>Collections:</p>
