--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -17,7 +17,7 @@
     <nav class="sidenav">
         <p>Collections:</p>
         <br>
-        <br><a href="/barrelfullofmonkeys_archive.html"><img src="/images/BFOM_button.jpg" width =150></a>
+        <br><a href="/bfomseries.html"><img src="/images/BFOM_button.jpg" width =150></a>
         <br><a href="/afterthehorror_collection.html"><img src="/images/after_horror/after_title_button.jpg" width =150></a>
         <br><a href="/heparkoursthroughtime.html"><img src="/images/parkour/PG_button.jpg" width =150></a>
         <br><a href="/sealdtestimony.html"><img src="/images/seald/seal_buddycop_4.jpg" width =150></a>
