--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ p{color:whitesmoke}
 button{font-size: 35pt; color: red;}
 #mission-statement{text-transform: capitalize; color:blue;}
 div{text-align: center;}
+.menu{padding-right: 100px;}
 p{font-size:15pt;}
 .banner{width:700;}
 .topnav{font-size: 25pt; padding-top: 0px;
