--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,8 @@ comments: true
           <a class="next" href="{{page.next.url}}">Next: {{page.next.title}} &raquo;</a>
         {% endif %}
       </div>
-    </footer> 
+    
+      
     {% if page.comments %}  
     <div id="disqus_thread"></div>
 <script>
@@ -77,7 +78,7 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                             
-    {% endif %}`  
+    {% endif %}  
     </footer>
   </body>
 </html>
