--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,10 +43,10 @@
       <div class="bottomprev">
         <a class="prev" href="/shipwreckd.html">&laquo; First</a>
         {% if page.previous.url %}
-          <a class="prev" href="{{page.previous.url}}">&laquo; Prev: {{page.previous.title}}</a>
+          <a class="prev" href="{{page.previous.url}}">&laquo; Prev </a>
         {% endif %}
         {% if page.next.url %}
-          <a class="next" href="{{page.next.url}}">Next: {{page.next.title}} &raquo;</a>
+          <a class="next" href="{{page.next.url}}"> Next   &raquo;</a>
         {% endif %}
       </div>
     
