--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@
     <div id="banner">
       <img src="/images/pile_banner.jpg" />
       <div class="topnav">
-        <a class="active" href="/herosumgame.html"><img src="/images/nav_home.png" width =150></a>
+        <a class="active" href="/wearamask.html"><img src="/images/nav_home.png" width =150></a>
         <a href="/blog.html"><img src="/images/nav_blog.png" width =150></a>
         <a href="https://www.patreon.com/Piledrivercomix?alert=2" target="_blank"><img src="/images/nav_patreon.png" width =200></a>
         <a href="https://www.paypal.me/piledrivercomix" target="_blank"><img src="/images/nav_donate.png" width =200></a>
