--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,5 +23,5 @@
 
 <div class="comic">
 
-<a href="/manifesto.html"><img src="/images/greetings_piledriver.jpg" width=650 /></a>
+<a href="/_posts/2024-12-05-undercoverbezos.html"><img src="/images/greetings_piledriver.jpg" width=650 /></a>
 </div>
